fix: note name not showing on top of canvas

--- a/src/components/Keyboard/Keyboard.scss
+++ b/src/components/Keyboard/Keyboard.scss
@@ -26,13 +26,14 @@
             position: absolute;
             top: -20px;
             display: none;
+            font-weight: 700;
             text-align: center;
         }
     }
 
     .keyboard__whitekey {
         height: 100%;
-        z-index: 1;
+        z-index: 2;
         border-left: 1px solid #bbb;
         border-bottom: 1px solid #bbb;
         border-radius: 0 0 5px 5px;
@@ -46,7 +47,7 @@
 
     .keyboard__blackkey {
         height: 50%;
-        z-index: 2;
+        z-index: 3;
         border-radius: 0 0 3px 3px;
         box-shadow: -1px -1px 2px rgba(255, 255, 255, 0.2) inset,
             0 -5px 2px 3px rgba(0, 0, 0, 0.6) inset, 0 2px 4px rgba(0, 0, 0, 0.5);
