--- a/src/components/Visualizer/VisualizerSection.scss
+++ b/src/components/Visualizer/VisualizerSection.scss
@@ -1,3 +1,3 @@
 .visualizer__section {
-    z-index: 2;
+    z-index: 1;
 }
